--- a/cuisine.ipynb
+++ b/cuisine.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +188,7 @@
     "%config InlineBackend.figure_format = 'retina'\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import os\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch import optim\n",
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,16 +532,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n",
+      "Epoch: 0.4\n",
+      "Train loss: 0.6682736456394196\n",
+      "Test loss: 0.7195759415626526\n",
+      "Test accuracy: 0.7894737124443054\n",
+      "done\n",
+      "Epoch: 0.6\n",
+      "Train loss: 0.5425712108612061\n",
+      "Test loss: 0.6247819662094116\n",
+      "Test accuracy: 0.7368420958518982\n",
+      "done\n",
+      "Epoch: 0.8\n",
+      "Train loss: 0.576122772693634\n",
+      "Test loss: 0.5880774855613708\n",
+      "Test accuracy: 0.8070175647735596\n",
+      "done\n",
+      "Epoch: 1.0\n",
+      "Train loss: 0.5033016324043273\n",
+      "Test loss: 0.6040775179862976\n",
+      "Test accuracy: 0.719298243522644\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
-    "epochs = 1\n",
+    "model = torch.load('cuisinemodel.pth') \n",
+    "optimizer = optim.Adam(model.fc.parameters(), lr = 0.003)\n",
+    "criterion = nn.NLLLoss()\n",
+    "epochs = 5\n",
     "steps = 0\n",
     "running_loss = 0\n",
     "print_every = 5\n",
     "train_losses, test_losses = [], []\n",
-    "for epoch in range(10):\n",
+    "for epoch in range(5):\n",
     "    try:\n",
     "        for inputs, labels in dataloaders['train']:\n",
     "            steps += 1\n",
@@ -566,12 +598,12 @@
     "                        top_p, top_class = ps.topk(1, dim=1)\n",
     "                        equals = top_class == labels.view(*top_class.shape)\n",
     "                        accuracy += torch.mean(equals.type(torch.FloatTensor)).item()\n",
-    "                train_losses.append(running_loss/len(trainloader))\n",
-    "                test_losses.append(test_loss/len(testloader))                    \n",
+    "                train_losses.append(running_loss/len(dataloaders['train']))\n",
+    "                test_losses.append(test_loss/len(dataloaders['valid']))                    \n",
     "                print(\"Epoch: \"+ str((epoch+1)/epochs))\n",
     "                print(\"Train loss: \"+ str(running_loss/print_every))\n",
-    "                print(\"Test loss: \"+ str(test_loss/len(testloader)))\n",
-    "                print(\"Test accuracy: \"+ str(accuracy/len(testloader)))\n",
+    "                print(\"Test loss: \"+ str(test_loss/len(dataloaders['valid'])))\n",
+    "                print(\"Test accuracy: \"+ str(accuracy/len(dataloaders['valid'])))\n",
     "                running_loss = 0\n",
     "                model.train()\n",
     "    finally:\n",
@@ -582,12 +614,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mexican_Cuisine\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "from path import Path\n",
+    "model = torch.load('cuisinemodel.pth')\n",
+    "image = Image.open(Path('indian-cuisine.jpg'))\n",
+    "trans = data_transforms['valid']\n",
+    "input = trans(image)\n",
+    "\n",
+    "input = input.view(1, 3, 224,224)\n",
+    "\n",
+    "output = model(input)\n",
+    "\n",
+    "prediction = int(torch.max(output.data, 1)[1].numpy())\n",
+    "print(class_names[prediction])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting path.py\n",
+      "  Downloading https://files.pythonhosted.org/packages/ea/82/d710e0727980ac1dccd2887f866e84c614a68c0a8d0c3aee606997e5eeeb/path.py-11.5.0-py2.py3-none-any.whl\n",
+      "Collecting importlib-metadata>=0.5 (from path.py)\n",
+      "  Downloading https://files.pythonhosted.org/packages/c4/e4/b5dbc3364c296e0510e739c4e09daba535e9676ffde6c1312c2210c76bf0/importlib_metadata-0.8-py2.py3-none-any.whl\n",
+      "Collecting zipp>=0.3.2 (from importlib-metadata>=0.5->path.py)\n",
+      "  Downloading https://files.pythonhosted.org/packages/00/42/10a1f8d29eaf9c7f2b555a5d1d602b9261f2a0cbec08f8f23d9056f5915d/zipp-0.3.3-py2.py3-none-any.whl\n",
+      "Installing collected packages: zipp, importlib-metadata, path.py\n",
+      "Successfully installed importlib-metadata-0.8 path.py-11.5.0 zipp-0.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install path.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!ls"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
